INCLUDES = \
       $(DEPS_CFLAGS)

libhildon_im_vkbrenderer_LTLIBRARIES = libhildon-im-vkbrenderer.la
libhildon_im_vkbrendererdir = /usr/lib

libhildon_im_vkbrenderer_la_SOURCES =  hildon-im-vkbrenderer.c
libhildon_im_vkbrenderer_la_CFLAGS = $(HILDONIMVKBRENDERER_CFLAGS)
libhildon_im_vkbrenderer_la_LDFLAGS = -module -version-info $(LIBHILDONIMVKBRENDERER_LT_VERSION)
libhildon_im_vkbrenderer_la_LIBADD = $(DEPS_LIBS)
